--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         Pero primero, prométeme que lo verás hasta el final.
       </p>
       <button class="intro-button" id="enter-btn">
-        Estoy listo(a) 💌
+        Estoy lista 💌
       </button>
     </div>
   </section>
