--- a/index.html
+++ b/index.html
@@ -27,21 +27,56 @@
     <div class="universe-gradient"></div>
 
     <!-- Sección mensaje grande -->
-    <section class="love-message">
-      <h2>Un universo que empieza contigo</h2>
-      <p>
-        13 de febrero, un día cualquiera para el mundo… pero conmigo tú lo vuelves diferente.
-        Lo llenas de risas, de momentos raros, de mensajes eternos y de silencios que dicen
-        “te quiero” sin usar palabras.
-      </p>
-      <p class="love-strong">
-        Mucho te quiero. Te amo. Te pienso. Te admiro. Te elijo.
-      </p>
-      <p>
-        Hoy solo quiero que entres a este pequeño universo y recuerdes que, aunque sea digital,
-        cada detalle está pensado para ti.
-      </p>
-    </section>
+  <section class="love-message">
+  <h2>Mi pequeño universo eres tú ✨</h2>
+  <p>
+    13 de febrero… para todos es un día más, pero desde que llegaste tú, cualquier fecha se siente
+    diferente. Lo que para el mundo es rutina, contigo se vuelve risa, abrazo, foto, recuerdo y caos
+    bonito en mi corazón.
+  </p>
+  <p class="love-strong">
+    Te amo mucho, te amo fuerte, te amo en serio, te amo en silencios, te amo en risas, te amo
+    cuando estás y también cuando no estás. Eres mi lugar favorito en todos los universos posibles 💘.
+  </p>
+  <p>
+    Este universo no tiene estrellas, tiene momentos contigo. No tiene planetas, tiene “te amo”,
+    “quédate”, “aquí es”, “contigo sí”. Ojalá cuando veas esto sientas lo mismo que siento yo
+    cuando pienso en ti: una mezcla de paz, locura, ganas de abrazarte y de no soltarte jamás 💫.
+  </p>
+</section>
+<section class="code-heart">
+  <h2>Mi demostración favorita de amor ❤️</h2>
+  <pre>
+          (tú)²      (yo)²
+        ───────── + ─────────  ≥  todo
+           miedos      dudas
+
+      lim  [dist(tú, yo)] → 0
+      t→siempre
+
+      (tú ∩ yo) ≠ ∅
+      (tú ∪ yo) = universoₙ
+
+      |tú| + |yo| = ∞
+      √(te·amo²) = te amo
+
+      si  x = tú  y  y = yo:
+      entonces  x + y = destino
+
+      {latidos} = {tú}×{yo}
+      P(tú conmigo) = 1
+
+      ∂(felicidad)/∂t = contigo
+      ∫ te amo · dt = siempre
+  </pre>
+  <p>
+    No sé si algún día entenderé todas las matemáticas del universo,
+    pero esta demostración sí la tengo clara: tú eres la constante que hace
+    que todo tenga sentido, la única solución estable a todas mis ecuaciones.
+    En resumen, mi resultado final siempre es el mismo: <span>te amo</span> ♾️.
+  </p>
+</section>
+
 
     <!-- Sección ramo de fotos -->
     <section class="bouquet-section">
